# citra

./: .gitignore  .gitmodules  .travis-build.sh  .travis-deps.sh  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.travis/aarch64/: build.sh
.travis/macos/: build.sh  deps.sh
.travis/ubuntu-16.04/: build.sh  docker.sh
.travis/ubuntu-18.04/: build.sh
src/: CMakeLists.txt
src/audio_core/: CMakeLists.txt  audio_core.cpp  cubeb_sink.cpp  cubeb_sink.h  dsp_interface.cpp  dsp_interface.h  null_sink.h  resampler.cpp  resampler.h  sdl2_sink.cpp  sdl2_sink.h  sink.h  soundio_sink.cpp  soundio_sink.h
src/audio_core/hle/: dsp.cpp  dsp.h  hle.cpp  pipe.cpp
src/citra/: CMakeLists.txt  config.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  crash_handler.cpp  game_list.cpp  main.cpp  main.h
src/citra_qt/configuration/: config.cpp  configure_graphics.cpp  configure_graphics.ui
src/common/: CMakeLists.txt  bit_field.h  fastmem_mapper.cpp  fastmem_mapper.h  fastmem_mapper_posix.cpp  file_util.h  save_state_helper.h  telemetry.cpp
src/common/logging/: backend.cpp  log.h
src/core/: CMakeLists.txt  backing_memory_manager.h  backing_memory_manager_generic.cpp  core.cpp  core.h  core_timing.cpp  core_timing.h  memory.cpp  memory.h  memory_ref.h  perf_stats.cpp  perf_stats.h  save_state.cpp  save_state.h  settings.h
src/core/arm/: arm_interface.h  arm_thread_context.h
src/core/audio/: audio.cpp  audio.h
src/core/file_sys/: disk_archive.cpp
src/core/frontend/: emu_window.cpp  input.h
src/core/hle/: hle.cpp  result.h  svc.cpp
src/core/hw/: gpu.cpp
src/core/loader/: ncch.cpp
src/tests/: CMakeLists.txt
src/video_core/: CMakeLists.txt  clipper.cpp  command_processor.cpp  pica.h  rasterizer.cpp
src/video_core/debug_utils/: debug_utils.cpp
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_rasterizer.h  gl_resource_manager.h  gl_shader_decompiler.cpp  gl_shader_decompiler.h  gl_shader_gen.cpp  gl_shader_gen.h  gl_shader_util.cpp  gl_state.cpp  gl_stream_buffer.cpp  gl_stream_buffer.h  renderer_opengl.cpp
(+60 files in other folders)
